fix: overflow code

--- a/src/assets/style/PostDetail.scss
+++ b/src/assets/style/PostDetail.scss
@@ -109,6 +109,7 @@
     font-family: 'Source Code Pro', monospace;
   }
   pre {
+    overflow-x: auto;
     margin: 15px 0 25px;
     padding: 15px;
     background-color: $bg-gray;
